<resources>
    <string name="app_name" translatable="false">MayDay</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="loading">Loading</string>
    <string name="title_activity_maps">Map</string>
    <string name="i_am_here">I am Here</string>
    <string name="hospital_places">Hospitals</string>
    <string name="police_places">Police Stations</string>
    <string name="fire_station_places">Fire Stations</string>


    <string name="ok" translatable="false">OK</string>
    <string name="ambulance">Ambulance</string>
    <string name="police">Police</string>
    <string name="fire_dep">Fire Dep.</string>
    <string name="emergency">Emergency</string>
    <string name="map">Map</string>

    <string name="your_location">Your location:</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="undo">UNDO</string>
    <string name="add">Add</string>
    <string name="name_hint">Name</string>
    <string name="country_code">Country code</string>
    <string name="phone_number">Phone number</string>
    <string name="update_contact">Update contact</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="location_message">Location permission is needed to run MayDay properly</string>
    <string name="camera_message">Camera permission is needed to run MayDay properly</string>
    <string name="permission_not_granted">Permission NOT granted</string>
    <string name="image_taken_saved">Picture saved successfully</string>
    <string name="error_saving_image">Error saving picture</string>
    <string name="choose_app">Choose App</string>
    <string name="contact_updated">Contact updated</string>
    <string name="new_contact_added">Contact added</string>
    <string name="message_missing_fields">All fields are Mandatory</string>

    <!-- Menu -->
    <string name="camera">Camera</string>
    <string name="flash_light">Flashlight</string>
    <string name="your_contacts">Your Contacts</string>
    <string name="email_us">Email Us</string>
    <string name="list_countries">List of Countries</string>
    <string name="gps_title">MayDay requires Location</string>
    <string name="gps_msg">Visit your device settings and turn ON location to \'High accuracy\'
        mode
    </string>
    <string name="gps_setting">Settings</string>
    <string name="gps_cancel">Cancel</string>
    <string name="gps_error">Location is DISABLE</string>
    <string name="contact_msg">Add your emergency contacts such as: family, friends, insurance agency and
        more.
    </string>
    <string name="query_hint">Search in ENGLISH only</string>
    <string name="mas_no_flashlight">Error with the Flashlight</string>


</resources>
