<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".fragments.AddContactFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" android:layout_marginTop="20dp"
        android:background="@color/white_color" android:elevation="2dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp" android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_person_black"
                    android:alpha="0.54"
                    />
                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" android:ems="10"
                    android:hint="@string/name_hint" android:inputType="textPersonName"
                    android:gravity="left"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                    android:alpha="0.54"
                    android:src="@drawable/ic_call_black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/txtCountryCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:ems="10" android:hint="@string/country_code"
                        android:inputType="number" android:gravity="left"/>

                    <EditText
                        android:id="@+id/txtTelephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2" android:ems="10"
                        android:hint="@string/phone_number"
                        android:inputType="date" android:gravity="left"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>



