<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swipeToRefresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_app"
                    tools:context=".fragments.ThreeCallsFragment">

        <View
            android:id="@+id/reveal_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:visibility="invisible"

            />


        <LinearLayout android:id="@+id/linearLayout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="20dp" android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/policeCard"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:elevation="2dp"
                card_view:cardCornerRadius="10dp"
                >

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:background="@drawable/police_back"
                              android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_margin="20dp"
                        android:lines="2"
                        android:text="@string/police"
                        android:textColor="@color/white_color" android:textSize="23sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/police"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ambulanceCard"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:elevation="2dp"
                card_view:cardCornerRadius="10dp"
                >

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:background="@drawable/ambulance_back"
                              android:orientation="horizontal">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|right"
                        android:layout_margin="20dp"
                        android:lines="3"
                        android:longClickable="true"
                        android:maxLines="2" android:minLines="1" android:singleLine="false"
                        android:text="@string/ambulance" android:textColor="@color/white_color"
                        android:textSize="23sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ambulance"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/fireCard"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:elevation="2dp"
                card_view:cardCornerRadius="10dp"
                >

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:background="@drawable/fire_back"
                              android:orientation="horizontal">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_margin="20dp"
                        android:lines="2"
                        android:text="@string/fire_dep"
                        android:textColor="@color/white_color" android:textSize="23sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/firetruck"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/txtYourLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" android:alpha="0.54"
                android:text="@string/your_location"
                android:textColor="@color/black_color" android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtAddressCord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp" android:alpha="0.54"
                android:textColor="@color/black_color" android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView

                android:id="@+id/txtAddressFull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.54"
                android:gravity="center_vertical|center_horizontal"
                android:lines="2" android:textColor="@color/black_color"
                android:textSize="16sp" android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>
